@@ -71,6 +71,7 @@
 * Stripe Payment Intents: Add the card brand field [yunnydang] #4964
 * Rapyd: Enable new auth mode payment_redirect [javierpedrozaing] #4970
 * Cecabank: Fix exemption_type when it is blank and update the error code for some tests [sinourain] #4968
+* RedsysRest: Update to $0 verify [almalee24] #4973
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
